<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Colorful Wechat</string>
    <string name="app_desc">Colorful Wechat:修改微信主题样式,舞动微信色彩。</string>
    <string name="view_item" formatted="false">No. %d Item</string>
    <string name="view_default">default color</string>
    <string name="view_press">click color</string>
    <string name="view_about">about</string>
    <string name="view_add">diy</string>
    <string name="view_market">market</string>

    <string name="view_themes">Themes Shop</string>
    <string name="view_user_profile">User Info</string>
    <string name="view_feedback">Feedback</string>

    <string name="view_account">name</string>
    <string name="view_password">password</string>
    <string name="view_repeat_password">repeat password</string>
    <string name="view_nickname">nickname</string>
    <string name="view_email">mail address</string>
    <string name="view_login">login</string>
    <string name="view_register">register</string>
    <string name="view_account_operation">usr account</string>
    <string name="view_switch">&gt;&gt;</string>

    <string name="diy_theme">DIY Theme</string>

    <string name="view_select_theme_color">choose Theme Color</string>
    <string name="view_dark_statusbar">dark status bar</string>
    <string name="view_dark_statusbar_text">black text</string>
    <string name="view_mac_login">Mac is on</string>
    <string name="view_top_reader">Reading Top article</string>

    <string name="view_select_background_color">choose background color</string>
    <string name="view_select_press_color">choose clicked color</string>

    <string name="view_select_top_color">choose TopList Color</string>

    <string name="menu_profile">user info</string>
    <string name="login_hint">mail/mobile/usrname</string>

    <string name="alert_hint">hint</string>
    <string name="alert_text_about">⋖(=^_^=)⋗~</string>
    <string name="alert_ok">sure</string>
    <string name="alert_cancel">cancel</string>
    <string name="alert_text_placeholder">input color value, start with #</string>

    <string name="toast_register_success">register success!</string>
    <string name="toast_register_failed">register fail，perhaps already has</string>
    <string name="toast_login_failed">login fail</string>
    <string name="ding_column">Ding Column</string>
    <string name="ding_group_entry">Ding Group Entry</string>

    <string name="group_chat">Group Chat</string>

    <string name="normal_group">Normal Group</string>
    <string name="theme">Theme</string>

    <string name="alert_xposed">
        <font color='#555'>
            Hi~ This software need root and xposed。If you havent xposed, you can goto download by\n
            <a color='#4455cc' href='http://www.coolapk.com/apk/de.robv.android.xposed.installer'>http://www.coolapk.com</a>
        </font>
    </string>

    <string name="theme1">Peach Blossom</string>
    <string name="theme2">The Car</string>

    <string name="toast_wechat_patch_checked">Wechat patch checked.</string>
    <string name="toast_wechat_patch_check_failed">Wechat patch check failed.</string>
    <string name="toast_wechat_not_installed">Wechat not installed.</string>

    <string name="goods_name">ThemeDIY</string>

    <string name="no_theme_name">Please input ur theme name First~</string>
    <string name="no_theme_desc">Please input ur theme description First~</string>
    <string name="upload_listback">Please upload list background First~</string>
    <string name="upload_topback">Please upload statusbar background First~~</string>
    <string name="upload_bottomback">Please upload bottombar background First~~</string>
    <string name="input_theme_name">input theme name :</string>
    <string name="input_theme_desc">input theme description :</string>

    <string name="confirm_pay">ensure pay</string>
    <string name="log_out">Log Out</string>

    <string name="loading">loading...</string>

</resources>
