<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/first_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarSize"
            android:background="@color/colorPrimary_black">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/view_select_theme_color"
                android:textColor="@color/colorAccent_black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/chkDarkStatusBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="@string/view_dark_statusbar" />

            <CheckBox
                android:id="@+id/chkDarkStatusBarText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="@string/view_dark_statusbar_text" />

        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/first_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/first_toolbar">

            <LinearLayout
                android:id="@+id/layMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <ImageView
            android:id="@+id/first_bottom_bar"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:scaleType="centerInside"
            android:src="@drawable/bottombar" />

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/first_bottom_bar"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            fab:fab_addButtonColorNormal="@color/colorAccent_black"
            fab:fab_icon="@drawable/ic_add_24dp"
            fab:fab_labelStyle="@style/menu_labels_style"
            fab:fab_labelsPosition="left">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabThemes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorAccent_black"
                fab:fab_icon="@android:drawable/ic_menu_crop"
                fab:fab_size="mini"
                fab:fab_title="@string/view_themes" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorAccent_black"
                fab:fab_icon="@android:drawable/ic_menu_send"
                fab:fab_size="mini"
                fab:fab_title="@string/view_feedback" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorNormal="@color/colorAccent_black"
                    fab:fab_icon="@android:drawable/ic_menu_info_details"
                    fab:fab_size="mini"
                    fab:fab_title="@string/view_about" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
