<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/layLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dip"
            android:visibility="gone">
        <RelativeLayout
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_centerInParent="true">
            <TextView
                    android:id="@+id/tvAccount"
                    android:layout_width="60dip" android:layout_height="40dip"
                    android:text="@string/view_account"
                    android:gravity="start|center_vertical"/>
            <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="60dip" android:layout_height="40dip"
                    android:text="@string/view_password"
                    android:gravity="start|center_vertical"
                    android:layout_below="@+id/tvAccount"/>
            <EditText
                    android:id="@+id/etAccount"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_toEndOf="@+id/tvAccount"/>
            <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_toEndOf="@+id/tvPassword"
                    android:layout_below="@+id/etAccount"
                    android:inputType="textPassword"/>
            <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="120dip"
                    android:layout_height="40dip"
                    android:layout_below="@+id/etPassword"
                    android:layout_marginTop="16dip"
                    android:layout_centerHorizontal="true"
                    android:text="@string/view_login"
            />
            <Button
                    android:id="@+id/btnSwitchRegister"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_below="@+id/etPassword"
                    android:layout_toEndOf="@+id/btnLogin"
                    android:layout_marginTop="16dip"
                    android:layout_marginStart="8dip"
                    android:text="@string/view_switch"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/layRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dip"
            android:visibility="visible">

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

            <TextView
                    android:id="@+id/tvRegAccount"
                    android:layout_width="60dip" android:layout_height="40dip"
                    android:text="@string/view_account"
                    android:gravity="start|center_vertical"/>
            <TextView
                    android:id="@+id/tvRegPassword"
                    android:layout_width="60dip" android:layout_height="40dip"
                    android:text="@string/view_password"
                    android:gravity="start|center_vertical"
                    android:layout_below="@+id/tvRegAccount"/>
            <TextView
                    android:id="@+id/tvRegRepeatPassword"
                    android:layout_width="60dip"
                    android:layout_height="40dip"
                    android:text="@string/view_repeat_password"
                    android:gravity="start|center_vertical"
                    android:layout_below="@+id/tvRegPassword"/>
            <TextView
                    android:id="@+id/tvRegNickname"
                    android:layout_width="60dip"
                    android:layout_height="40dip"
                    android:text="@string/view_nickname"
                    android:gravity="start|center_vertical"
                    android:layout_below="@+id/tvRegRepeatPassword"
            />
            <TextView
                    android:id="@+id/tvRegEmail"
                    android:layout_width="60dip"
                    android:layout_height="40dip"
                    android:text="@string/view_email"
                    android:gravity="start|center_vertical"
                    android:layout_below="@+id/tvRegNickname"
            />
            <EditText
                    android:id="@+id/etRegAccount"
                    android:hint="邮箱/手机号/昵称"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_toEndOf="@+id/tvRegAccount"/>
            <EditText
                    android:id="@+id/etRegPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_toEndOf="@+id/tvRegPassword"
                    android:layout_below="@+id/etRegAccount"
                    android:inputType="textPassword"/>
            <EditText
                    android:id="@+id/etRegRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_toEndOf="@+id/tvRegRepeatPassword"
                    android:layout_below="@+id/etRegPassword"
                    android:inputType="textPassword"/>
            <EditText
                    android:id="@+id/etRegNickname"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:hint="非必填"
                    android:layout_toEndOf="@+id/tvRegNickname"
                    android:layout_below="@+id/etRegRepeatPassword"/>
            <EditText
                    android:id="@+id/etRegEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:hint="非必填"
                    android:layout_toEndOf="@+id/tvRegEmail"
                    android:layout_below="@+id/etRegNickname"/>

            <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="120dip"
                    android:layout_height="40dip"
                    android:layout_below="@+id/etRegEmail"
                    android:layout_marginTop="16dip"
                    android:layout_centerHorizontal="true"
                    android:text="@string/view_register"
            />
            <Button
                    android:id="@+id/btnSwitchLogin"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_below="@+id/etRegEmail"
                    android:layout_toEndOf="@+id/btnRegister"
                    android:layout_marginTop="16dip"
                    android:layout_marginStart="8dip"
                    android:text="@string/view_switch"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>